# agentgateway-deployment

./: .gitignore  .mcp-gateway-proxy.yml.swp  DEPLOYMENT_README.md  README.md  config.yml  deploy-agentgateway.sh  deploy-mcp-ui.sh  k8s.md  mcp-example-deployment.yml  mcp-example-http-route.yml  mcp-hubspot-deployment.yml  mcp-sql-deployment.yml  mcp-ui-deployment.yml  mcp-ui-http-route.yml
adk-agent-deployment/: adk-agent-deployment.yml  adk-secret.yml
adk-ui-deployment/: adk-ui-deployment.yml  adk-ui-http-route.yml
adk-web-ui/: .python-version  Dockerfile  adk_chat_graph_ui.py  adk_chat_sessions.db  adk_chat_ui.py  adk_chat_ui_memory.py  app.py  chart_tool.py  config.py  main.py  pyproject.toml  run.py  session_manager.py  utils.py
adk-web-ui/app/: __init__.py  adk_client.py  routes.py
adk-web-ui/auth/: helpers.py
adk-web-ui/routes/: auth.py  chat.py  health.py  view_routes.py
adk-web-ui/templates/: adk_chat.html  auth_error.html  auth_success.html  chat.html  dashboard.html  login.html
agentgateway-helm/: Chart.yaml  README.md  helm-deployment.sh  values-prod.yaml  values.yaml
agentgatewaycrds/: agentgateway.dev_agentgatewaybackends.yaml  agentgateway.dev_agentgatewayparameters.yaml  agentgateway.dev_agentgatewaypolicies.yaml
bmg-agent-deployment/: bmg-agent-deployment.yml  bmg-secret.yml
bmg-agent-gateway/: Chart.yaml  README.md  values.yaml
bmg-ui-deployment/: bmg-ui-deployment.yml  bmg-ui-http-route.yml
bmgAgentgateway/: README.md  values.yaml
cronjob/: cronjob-deployment.yml
mcp-ui-app/: .gitignore  README.md  app.js  build.sh  (+3 more)
(+64 files in other folders)
